[package]
name = "raftkv"
version = "0.1.0"
authors = ["siddontang <siddontang@gmail.com>"]

[dependencies]
raft = "0.1"
log = "0.4"
env_logger = "0.5.5"
clap = "2.31.1"
rocket = "0.4"
rocket_codegen = "0.4"
protobuf = "1.4"
byteorder = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.1"
reqwest = "0.8.5"
rand = "0.4"
rocksdb={git = "https://github.com/pingcap/rust-rocksdb.git",rev="b127863a82fcf7784d5697261207df827f6c74a0"}

#[dependencies.rocksdb]
#git = "https://github.com/pingcap/rust-rocksdb.git"

#[replace]
#"protobuf:1.4.1" = { git = "https://github.com/stepancheg/rust-protobuf.git" }